--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="save">Save</string>
     <string name="refuel">Refuel</string>
     <string name="settings">Settings</string>
+    <string name="vehicles">Vehicles</string>
     <string name="edit_vehicles">Edit vehicles</string>
     <string name="privacy_policy">Privacy policy</string>
     <string name="sign_out">Sign out</string>
